book links verwijderen

--- a/docroot/sites/all/themes/wilderness/style.css
+++ b/docroot/sites/all/themes/wilderness/style.css
@@ -1501,3 +1501,18 @@ h1.site-name {
   font-size: 1.4em;
   color: grey;
 }
+
+.book-navigation .menu {
+	border: 0;
+	margin: 10px;
+	padding: 10px;
+}
+
+.book-navigation {
+	border-top: 1px solid #ccc;
+	border-bottom: 1px solid #ccc;
+	padding: 10px;
+margin: 20px 0 20px 0;
+
+
+}
